--- a/views/partials/navigation.ejs
+++ b/views/partials/navigation.ejs
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title><%= title %></title>
-    <link rel="shortcut icon" type="x-icon" href="img/site-icon.png">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/output.css">
+    <link rel="shortcut icon" type="x-icon" href="/img/site-icon.png">
+    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/output.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
@@ -22,7 +22,7 @@
           
           <div class="">
 
-              <a href="/"><img class="h-10 xl:h-28 2xl:h-32 mx-0 xl:mx-5 my-2 xl:my-5" src="img/Logo.png" alt=""></a>
+              <a href="/"><img class="h-10 xl:h-28 2xl:h-32 mx-0 xl:mx-5 my-2 xl:my-5" src="/img/Logo.png" alt=""></a>
 
               <div class="bg-white xl:bg-transparent hidden xl:grid absolute xl:static top-6 right-0 z-10 rounded-sm py-5 xl:py-0 2xl:py-5 max-h-[800px] xl:max-h-[470px] 2xl:max-h-[750px] overflow-y-auto scroll-h min-w-[195px] scroll-smooth shadow-md xl:shadow-none mt-5 px-5" id="toggle-menu">
 
