--- a/views/pages/customerDetails.ejs
+++ b/views/pages/customerDetails.ejs
@@ -1,68 +1,99 @@
 <%- include('../partials/navigation.ejs') %>
 
-<section class="bg-gray-100 px-5 py-5">
+        <section class="bg-gray-100 px-5 py-5">
 
-          <div class="grid grid-cols-2 xl:grid-cols-4 gap-10">
+          <div class="bg-white grid grid-cols-1 xl:grid-cols-3 p-5 gap-10">
 
-            <a href="/customer-list">
-              <div class="bg-white rounded-3xl flex justify-center items-center flex-col h-28">
-                <p class="text-4xl xl:text-5xl"><%= customers.length %></p>
-                <p style="margin-bottom: 5px;" class="text-tColor mt-2">Number of Customer</p>
+            <div class="flex items-center gap-10">
+              <div class="h-16 aspect-square  rounded-full">
+                <% if(customer.customer_image){ %>
+                    <img src="<%= customer.customer_image %>" alt="">
+                    <% } %>
               </div>
-            </a>
-
-            <a href="/surveyor-list">
-              <div class="bg-white rounded-3xl flex justify-center items-center flex-col h-28 ">
-                <p class="text-5xl"><%= surveyors.length %></p>
-                <p style="margin-bottom: 5px;" class="text-tColor mt-2">Number of Surveyor</p>
+              <div>
+                <p class="font-bold"><%= customer.customer_name %></p>
+                <p class="text-tColor text-sm"><%= customer.customer_mobile_number %></p>
               </div>
-            </a>
-
-            <a href="/service-list">
-              <div class="bg-white rounded-3xl flex justify-center items-center flex-col h-28 ">
-                <p class="text-5xl"><%= services.length %></p>
-                <p style="margin-bottom: 5px;" class="text-tColor mt-2">Number of Services</p>
-              </div>
-            </a>
-
-            <a href="/appointment-list">
-              <div class="bg-white rounded-3xl flex justify-center items-center flex-col h-28 ">
-                <p class="text-5xl"><%= appointments.length %></p>
-                <p style="margin-bottom: 5px;" class="text-tColor mt-2">Overall Appointment</p>
-              </div>
-            </a>
-
-            <div class="bg-white rounded-3xl flex justify-center items-center flex-col h-28 ">
-              <p class="text-5xl"><%= appointments.length %>&#2547</p>
-              <p style="margin-bottom: 5px;" class="text-tColor mt-2">Total Surveyor Payment</p>
             </div>
 
-            <div class="bg-white rounded-3xl flex justify-center items-center flex-col h-28 ">
-              <p class="text-5xl"><%= appointments.length %>&#2547</p>
-              <p style="margin-bottom: 5px;" class="text-tColor mt-2">Total Appointment Payment</p>
+            <div class="border-l-2 pl-5">
+              <p class="uppercase text-tColor">Personal Information</p>
+              <table class="text-sm w-full mt-3">
+                <tbody>
+                  <tr>
+                    <td>Contact Number</td>
+                    <td><%= customer.customer_mobile_number %></td>
+                  </tr>
+                  <!-- <tr>
+                    <td>Gender</td>
+                    <td>Male</td>
+                  </tr>
+                  <tr>
+                    <td>Date of Birth</td>
+                    <td>1 Jan, 1985</td>
+                  </tr> -->
+                  <tr>
+                    <td>Address</td>
+                    <td><%= customer.customer_address %>, <%= customer.upzila_name %>, <%= customer.district_name %>, <%= customer.division_name %></td>
+                  </tr>
+                </tbody>
+              </table>
             </div>
 
+            <!-- <div class="border-l-2 pl-5 flex flex-col justify-between">
+
+              <div>
+                <p class="uppercase text-tColor">Extra Information</p>
+                <div class="flex justify-between mt-1">
+                  <p>Refer</p>
+                  <p>Demo Namer</p>
+                </div>
+              </div>
+              
+              <div class="flex items-center justify-between mt-3">
+
+                <div>
+                  <p class="text-2sxl xl:text-3xl font-bold">653</p>
+                  <p class="text-tColor">Total Orders</p>
+                </div>
+
+                <div>
+                  <p class="text-2sxl xl:text-3xl font-bold">140</p>
+                  <p class="text-tColor">Completed</p>
+                </div>
+
+                <div>
+                  <p class="text-2sxl xl:text-3xl font-bold">10</p>
+                  <p class="text-tColor">Cancelled</p>
+                </div>
+
+              </div>
+            </div> -->
+            
           </div>
+
+         
 
           <div class="bg-white rounded-xl border-2 border-gray-200 p-5 mt-5">
 
-            <div class="my-5 flex justify-between items-center">
-              <p class="font-bold">Recent Appointment</p>
-
-              <div class=" flex items-center gap-2">
-                <div class="relative">
-                  <select class=" bg-primaryColor block appearance-none w-full  py-3 px-4 pr-8 rounded-xl leading-tight focus:outline-none shadow">
-                    <option hidden>Filter</option>
-                    <option>Filter 1</option>
-                    <option>Filter 2</option>
-                    <option>Filter 3</option>
-                    <option>Filter 4</option>
-                  </select>
-                  <div class="pointer-events-none absolute inset-y-0 right-1 flex items-center px-2">
-                    <i class="fa-solid fa-angle-down"></i>
-                  </div>
-                </div>
+            <div class="flex flex-col xl:flex-row justify-between items-start xl:items-center gap-3">
+              <ul class="flex gap-5 border-b-2 pb-2 flex-wrap">
+                <li><a href="" class="font-bold border-b-2 border-blue-500 text-blue-500 pb-[10px]">All Orders</a></li>
+                <li><a href="">Pending</a></li>
+                <li><a href="">Cancelled</a></li>
+              </ul>
+              <div class="bg-white shadow relative rounded-md w-full xl:w-fit">
+                <input class="py-2 pl-3 pr-10 focus:outline-none w-full xl:w-fit xl:max-w-[250px]" type="text" placeholder="Search by order id">
+                <i class="fa-solid fa-magnifying-glass absolute top-1/2 right-3 -translate-y-1/2 text-tColor"></i>
               </div>
+              
+            </div>
+
+            <div class="my-5 flex justify-between items-center">
+
+              
+
+              
             </div>
 
             <div class="flex flex-col justify-around">
@@ -71,32 +102,28 @@
                 <table class="table-auto text-xs md:text-sm profile-table w-[300%] md:w-full shadow">
                   <thead>
                     <tr>
-                      <th>S.</th>
+                      <th>SI.</th>
                       <th>SURVEYOR</th>
                       <th>LAND OWNER</th>
                       <th>DATE</th>
                       <th>SERVICE</th>
                       <th>STATUS</th>
-                      <th>DETAILS</th>
                     </tr>
                   </thead>
                   <tbody>
                     <% let serialNumber = 1; %>
-                    <% for(let appointment of appointments){ %>
+                    <% for(let appointment of customer_appointment_info) {%>
                     <tr>
-                      <td><strong><%= serialNumber %></strong></td>
+                      <td><%= serialNumber %></td>
                       <td><a href="/surveyor-details/<%= appointment.surveyor_id %>"><%= appointment.surveyor_name %></a></td>
-                      <td><a href="/customer-details/<%= appointment.surveyor_id %>"><%= appointment.customer_name %></a></td>
+                      <td><%= customer.customer_name %></td>
                       <td><%= appointment.appointment_date %></td>
-                      <td><span class="bg-green-100 text-green-600 p-1 rounded-md text-xs"><a href="/service-edit/<%= appointment.service_id %>"><%= appointment.service_name %></a></span></td>
+                      <td><%= appointment.service_name %></td>
                       <td><p class="bg-yellow-100 text-yellow-400 w-fit font-bold p-2 rounded"><%= appointment.status_name %></p></td>
-                      <td><a href="/appointment-details/<%= appointment.appointment_id %>"><i class="fa-solid fa-caret-down border-2 p-2 rounded-[50%] text-tColor border-tColor px-[8px] py-[5px]"></i></a></td>
                     </tr>
                     <% serialNumber++; %>
-                  <% } %>
-
+                    <% } %>
   
-
                   </tbody>
                 </table>
   
